@@ -295,3 +295,15 @@ rpmtime_t rpmswSub(rpmop to, rpmop from)
     }
     return usecs;
 }
+
+void rpmswPrint(const char * name, /*@null@*/ rpmop op)
+        /*@globals fileSystem @*/
+        /*@modifies fileSystem @*/
+{
+    static unsigned int scale = (1000 * 1000);
+    if (op != NULL && op->count > 0)
+        fprintf(stderr, "   %s %8d %6lu.%06lu MB %6lu.%06lu secs\n",
+                name, op->count,
+                (unsigned long)op->bytes/scale, (unsigned long)op->bytes%scale,
+                op->usecs/scale, op->usecs%scale);
+}
